# treepoem

./: .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  make_barcode_type_list.py  make_data.py  requirements-to-freeze.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
requirements/: py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/treepoem/: __init__.py  __main__.py  data.py
src/treepoem/postscriptbarcode/: barcode.ps  barcode_with_sample.ps
tests/: conftest.py  test_ghostscript.py  test_main.py  test_treepoem.py
treepoem/: README.rst  __init__.py  __main__.py  barcode_types.py  data.py
treepoem/postscriptbarcode/: barcode.ps  barcode_with_sample.ps
