[metadata]
name = treepoem
version = 3.3.1
description = Barcode rendering for Python supporting QRcode, Aztec, PDF417, I25, Code128, Code39 and many more types.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Christian Muirhead
author_email = xtian@babbageclunk.com
maintainer = Adam Johnson
maintainer_email = me@adamj.eu
url = https://github.com/adamchainz/treepoem
project_urls =
    Changelog = https://github.com/adamchainz/treepoem/blob/master/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = barcode bwipp postscript ghostscript qr qrcode aztec azteccode pdf417 interleaved2of5 i25 code128 code39
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = Pillow
python_requires = >=3.5
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    treepoem=treepoem.__main__:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = treepoem
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    setup.py
    src
    tests
